--- a/ramp-board/dev/install.html
+++ b/ramp-board/dev/install.html
@@ -225,6 +225,7 @@
 <li><dl class="simple">
 <dt><code class="docutils literal notranslate"><span class="pre">ramp-utils</span></code>:</dt><dd><ul class="simple">
 <li><p>click</p></li>
+<li><p>pandas</p></li>
 <li><p>pyyaml</p></li>
 </ul>
 </dd>
