Updating the docs in ramp-board/dev/ for branch: master, commit f06bb48d8f69baa5925011fe79ccfa6fd3826771 [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -249,6 +249,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-config">ramp-launch-dispatcher command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-setup-create-conda-env-config">ramp-setup-create-conda-env command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-config">ramp-setup-deploy-event command line option</a>
 </li>
       </ul></li>
@@ -305,6 +307,8 @@
         <li><a href="cli.html#cmdoption-ramp-launch-dispatcher-event-config">ramp-launch-dispatcher command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-worker-event-config">ramp-launch-worker command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-setup-create-conda-env-event-config">ramp-setup-create-conda-env command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-event-config">ramp-setup-deploy-event command line option</a>
 </li>
@@ -1619,8 +1623,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-all-users-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-leaderboards command line option
 
@@ -1630,6 +1632,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-user-leaderboards command line option
 
@@ -1689,6 +1693,15 @@
         <li><a href="cli.html#cmdoption-ramp-launch-worker-v">--verbose</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-launch-worker-v">-v</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-setup-create-conda-env command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-setup-create-conda-env-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-setup-create-conda-env-event-config">--event-config &lt;event_config&gt;</a>
 </li>
       </ul></li>
       <li>
