ENH improve title

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             class="app-logo color-white" height="96px" style="max-width: 12%">&nbsp;RAMP</span></div>
             </h2>
             <p class="text-center color-white app-description">Rapid Analytics & Model Prototyping</p>
-            <p class="text-center color-white app-description">using Python</p>
+            <p class="text-center color-white app-description">The developer documentation</p>
             <div class="header-button">
                 <a class="btn btn-primary btn-lg app-btn" href="#packages" role="button">Learn More »</a>
             </div>
