Updating the docs in ramp-board/dev/ for branch: master, commit 8576a939d649c2e3658321e63f504f73f6dd999f [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -223,6 +223,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">ramp-database-approve-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-config">ramp-database-delete-event command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
@@ -255,6 +257,13 @@
 </li>
       </ul></li>
       <li>
+    --config-event &lt;config_event&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">ramp-database-delete-event command line option</a>
+</li>
+      </ul></li>
+      <li>
     --data-dir &lt;data_dir&gt;
 
       <ul>
@@ -268,6 +277,13 @@
         <li><a href="cli.html#cmdoption-ramp-setup-init-deployment-dir">ramp-setup-init command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-init-event-deployment-dir">ramp-setup-init-event command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --dry-run
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-dry-run">ramp-database-delete-event command line option</a>
 </li>
       </ul></li>
       <li>
@@ -333,6 +349,8 @@
     --force
 
       <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-force">ramp-database-delete-event command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-force">ramp-setup-deploy-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-init-force">ramp-setup-init command line option</a>
@@ -340,6 +358,8 @@
         <li><a href="cli.html#cmdoption-ramp-setup-init-event-force">ramp-setup-init-event command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --force &lt;force&gt;
 
@@ -349,8 +369,13 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-force">ramp-database-add-problem command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --from-disk
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-from-disk">ramp-database-delete-event command line option</a>
+</li>
+      </ul></li>
       <li>
     --hidden-notes &lt;hidden_notes&gt;
 
@@ -1542,6 +1567,21 @@
 </li>
       </ul></li>
       <li>
+    ramp-database-delete-event command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">--config-event &lt;config_event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-dry-run">--dry-run</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-force">--force</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-event-from-disk">--from-disk</a>
+</li>
+      </ul></li>
+      <li>
     ramp-database-delete-event-team command line option
 
       <ul>
@@ -1623,6 +1663,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-all-users-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-leaderboards command line option
 
@@ -1632,8 +1674,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-update-leaderboards-event">--event &lt;event&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-user-leaderboards command line option
 
