Updating the docs in ramp-board/dev/ for branch: master, commit fdab6b24f183ee2103e32c95566a932d1efee542 [skip ci]

--- a/ramp-board/dev/install.html
+++ b/ramp-board/dev/install.html
@@ -191,7 +191,7 @@
 <li><p>nbconvert</p></li>
 <li><p>numpy</p></li>
 <li><p>pandas</p></li>
-<li><p>psycopg2</p></li>
+<li><p>psycopg2-binary</p></li>
 <li><p>sqlalchemy</p></li>
 </ul>
 </dd>
@@ -201,7 +201,7 @@
 <dt><code class="docutils literal notranslate"><span class="pre">ramp-engine</span></code>:</dt><dd><ul class="simple">
 <li><p>click</p></li>
 <li><p>numpy</p></li>
-<li><p>psycopg2</p></li>
+<li><p>psycopg2-binary</p></li>
 <li><p>sqlalchemy</p></li>
 </ul>
 </dd>
